Avoid whitespace wrapping in the SIGN IN button (#789)
Minor thing that's been bugging me. The SIGN IN button was wrapping to a new line in Safari; this change prevents that.

--- a/_sass/_pulumi.scss
+++ b/_sass/_pulumi.scss
@@ -183,6 +183,10 @@ $accent4: #fbe5d7; // light orange
     background-color: #66deff;
 }
 
+.no-wrap {
+    white-space: nowrap !important;
+}
+
 // Don't have SVG icons default to black. Just use current text color.
 svg {
     fill: currentColor;
